--- a/WerWirdMillionär/Form1.resx
+++ b/WerWirdMillionär/Form1.resx
@@ -15283,52 +15283,59 @@
   <data name="button_joker_3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAHYAAAA6CAYAAABlPa0GAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAqWSURBVHhe7dzndx1HGcdx0TshlNBLIAmEmECAhJAAAUxCCwQIndBCh9e0Q0gIyGqWbdlyb3Lv
-        vYlX+z/5Lxjmmbkz88wzv9mZXV1dWQ57zvecKNbs7p3Pea4US5uxlTquX7/eq3PnzinX+fPnoy5cuOC7
-        ePGi79KlS1GXL1/2XblyxXf16lXftWvXotC91PSCO9Am1HT27FlFcWCJvBzA6F5qumkP9GJ5J0+eVLxT
-        p075Tp8+7Ttz5ozP4SLkGmCJXAPMkanFxcXW0GvlrfoDvSjeiRMnFHUjA0vkGmD0Wnmr5kA3zzt69Kg6
-        duyY7/jx4z6Hi5BrgCVyDbBEXi5gGdob3g13oJvkEawrByyRa4Alcg2wRK4Blsh9gdHe8Fb8QDdFHTp0
-        SB0+fDjqyJEjvqUCNzPfWpGGDSxDe0mN/EA3QREsryuwRJbAaNNHUeltOgdci4z2klr2A12UOnDggHId
-        PHjQ1xUYbSZK/fdPKxK6FxQHlsgINBfaa2roB7oItbCwoKgcsETOAaNNQqFNH0XoXlBogvsAo72mhnbI
-        E+/bt09R+/fv9zlcCSyRCRZtBoU2czWGXhvVF9glHZZ8yBPu3bvXwPYFRi+aQpu0GkOvjWr7OowgZdKh
-        9yFPtGfPHkURrKsNGL04Cm0GSl+zV+hcbaFz1ITO1RbaC2rkwPIEDrYWGL0ICr1olL5mr9C52kLnqAmd
-        qy20FxSa4DZkfe3IpfqQC3ft2qV2794dhYDlDaMXV5O+Zq+Nc9WuH9V1Ssl9q32b1teOnIqHXECwvByw
-        vEH0ImrS1xzJho/qOqXkvrkJLgHra0dO2UN+4o4dO9TOnTt9OWB3Q+im+6SvPZINH9V1ujZ0YPkJBOvi
-        wBL5/7D4z7Mt/lH0h6hm+gnVTH2z+DdaRVj5B9u2bVPbt2/3cWDKQQ4b1KXvodeGuXVdQ+dqbQDi1wMc
-        tfh7pa7Jfif6rVJXZb/xNZOP677u6wws/wXBuhDwTQcLYXQFGL8+AxP6tVJXeL8CPW277Pqlaia+GlWa
-        YH0vkaP/h/n5ebV161afBF4uSJm+F7th4M98g6mJJ0fiSJgUh6bGr8/iaAyA49dxGIET94vQJdfPRT+L
-        u0j91NSMP2ZCwBxZ31MK60LAQ4dlODYLQptFmY+LMGhyJMwAR8C4/PoiTIzj17XhMJi4p+Iu/AT046hm
-        fK1q/rO29adKlL6nGHbLli2KygEnsAlMwAlJGITjQGy0WVQCk8Hxn99zavx6BJPFeSqsy+LEMKbzPxL9
-        EPQDpc7xvm9q/v0Fk/uRoQR2yPqeYtjNmzcb2BwwfadGpTApTozCcABM3NNhwyqmBsN0mxq/PoFBOAHF
-        ryvCBJzQ92xned8VPRk686Rqnv+cqfRzYX1PFnZubk5RBOviwPa7s8ctTBFnMDEdpyZGsTBu42rrOzXo
-        XDWlOBKG4WgY23dA3w6dpvS7YtITvua5h00ImCOPbdq0ycDmgN13Ze04Esbi1E6Nj6GgzWyr79Sgc9WU
-        h0E4AcZ0itLvflHfSDupBypK/6fPsw+a5O9nSWQD60LAzbovm3Jfa9pwbOWp4Sh+4zJfaySO//yeU+PX
-        d5gagvHr2nASGIsT9zWlTsj0IEV9RanjtuafD5hyv4DngMc2btyoqBxwM/4lU4wjYWIcm4RBOHZqwtsZ
-        hxIwGRz/+T2nxq/vMDWUX0cfF2FiHJselqTHbMdcjyY1z3zChH7DkiOPbdiwwcDmgN13Y21TE+PwaRE4
-        malJgCqnJoXpPjV+fRFHwlgcvx7CIBw9JK6jrrWiL4aOuLSBrvnHfabS70kbWBcCbp5/xHw3VsbRGD2n
-        JgYSMBCnDwzCkTB1U8Nh/PoijoWJ+3zoMPUISO89q/n7vabc70g74LHZ2VlF5YCbf33GBHHgNwFUCSbG
-        yQOVYCwOB+pan6nhMP48WZwYxnTosyK9v7KDD4seMjV/W2Mq/SL82Pr16w1sDrh5Tp9MV4IxRSgIBuHE
-        MH2mhk9O1/pMDUfx50lwJEzACX1aqQOyB0Wfsi3Ymr/ebSo96WBgXQi4eVafTJeHCTghCYNwBjCtb2nl
-        qfHrWnEEDMPx6xMYXRHmobA+C5PiqIUHQPfb9vM+KdLfOP3lLlPuURaHPDYzM6OoHHDzzP2mFIbhZN/O
-        EE4MY2NvaR2nxq8zH0scCZPi+PUdpobj+PUOJsKRMBbHtM/1cdB9ob3Ux3zNn+8woWeVOLL/K8UScNvU
-        +GnpOTUxkMDJwPjPNx9zFASDcOKJ8eermBqO49flYACO7aNxe6h7RR9JKj2Mpu/F/pWi+4fp6WkDmwNu
-        m5o4AVP5tYY2h6qdGv/5EZCG6Dk1/nwIB8JYHL/O4EgYgLN7Dege0YeV2iW721R6pFTfSwrrQsDtMBan
-        z9TQplAJTmFq/LrsWxqDyeKEifHnK8FAnHvC+iyOhYn7kFI7eR8E3WXbYSs9UqrvIYadmppSVA4Yw1ic
-        uAFM5dTQZlApjMARMH4dwzElMAAngVkTzlcxNRHMAMevL8DY7hTdEdru+oDo/Sb+SCkC1vcQw7qKwALG
-        tISp0de0G+JhEI6A0fl1HseB8EowA5xWGIQjYe4M67MwAce0jbod9L64re81tT0zTLD62pFj9AE1OTlp
-        YHPAEsY2QPE4EgbgJJOCcCRMwPHr2NTk39IkTIrjz1cxNQjHr09gAk7oPWnz7xa9K6rtmWFKXzty9If8
-        gxKwn2A/Mf2mRl9rScVAGqMVRuAAmKXWhqPm36nUFtk7RG835R4Ml8D6mpFbcshPIFhXDpiyQP2nRl9r
-        SeG3tO5Tg87dJ4+zmfc20Fttc67bouSD4Tlgfc3ILXvIT8wBS+RhTE07jgXR92Q3EODE09Jvavz5izgS
-        JsVRc28JbXK9WfSmKPRQOAImG17xkAsmJiYUVQIuwwSckICBODGMvqfBxmOYUAkG4dwWzp/FkTACZyP1
-        RtCtcRveALoleepfIjtcsuFVH3IhApbI0QS34HT5WiNx9L3YjYcwFidOwiCcAOPPX4RBOLekzb5e9Loo
-        9NQ/TwKTBa/zIU+wbt06A8trA17K1LTh6HuxG9+Cs5Sp8efPwqQ4ava1Sq2XvUb0atsM71Xwqf82YLLg
-        9T7kiboCu/x30ZVfazDOrX7jl7sUZoAjYNJeaZt2vcKUe/If/a8dOLBD1vcUOSz5kCckWF5X4Jqpid7K
-        xNToexhJASbghF4emnK9TPTSKP7Ufx9gfU+Rw9AOeWJXF2CJHP33MHxLG+7UtONIGIEzSb0E9OIo9FA4
-        /986UDXAaK+poR/oItT4+HjnCUbA7TAIR8IgHAaTxYlh1AT1ItFYdfyhcAkskduA0V5Ty36gi1IlYIks
-        gV38x4aU/7lwAoNwJEw3HBR6pNSVeyi8CzDaS2rkB7oJqnaCa4ElMtr0UcQfKc0h1wBLZIeL9pJa8QPd
-        FI8DS+Q+wG6CKfkLeDz5e9Iu+SgLTz6Q5nK4fYEptDe8G+5AN8mrmeIcsESuAZbINcASuQZYIpeA0d7w
-        Vs2Bbp63HMASuQZYItcAS2QOjF4rb9Uf6EXxaidYIt/owOi18m7aA73YmmqBJXINsETmwOheanrBHWgT
-        auo6wcMCRvdS08ocY2P/A/LC/ugE6vLNAAAAAElFTkSuQmCC
+        YQUAAAfMSURBVHhe5ZwHchs5EEV5hc05aXPOOZzOOSc5J8mWnHM6l08wix4JrUbzA2hgMJQod9WrEolp
+        APNfjb0rEp5sVj1//ryKu3fvdp579+4F3L9/n3nw4AHz8OHDgEePHjGPHz9mnjx5wjx9+jQA7cXCC1co
+        BAt37tzpCClYSx5DMNqLhW1b6GYlN27c6CQ3b95kbt26xdy+fZvxcpFki2At2SJYSiaePXuWBN2rZO4L
+        3ZTk+vXrHbGVBWvJFsHoXiVzU2jzkpWVlW51dZW5du0a4+UiyRbBWrJFsJY8lmANykay5QptUkJiPTHB
+        WrJFsJZsEawlWwRrybWCUTaSTS+0KWJ5ebm7cuVKwNWrV5mhghf+W9wUWgvWoCyJmRfaBEFiJaWCtWQt
+        GIU+C3J/TMcEWyWjLInRCy1KXL58ufMsLS0xpYJRmPOIFKwlI6ExUNZE80KLEJcuXeqImGAtOSYYhTSP
+        oCe4RjDKmmhWeuILFy50xMWLFxkvVwvWkkksCmN0/h2Jf+zUCvZoD4NLT3j+/PlebK1gGFAtIMBm/N2W
+        1N/DSKRGe6guPdG5c+c6gsR6UoJhWAW4NatAoU7x1wZoDgtyjoA/y5i5YD2BF2sVDAP1oEAUbs0qUHgp
+        0BwWFv5w/Q1AT3BKsls78GIu3XjmzJnu7NmzAUgwSwHhleDWXAtOj4FQENwPxiTBdb+Xw/1gLOC3Mqx/
+        TLu1A0/Z0g0kVhITrIMrQgTh1rQFFmGqH4RH8HVgzAL3/+peN8Q/wTnBbu3AU7T0hadOnepOnz7NxATL
+        UCEglBRubXvgIBjuB2OS5HW/5OF+MJbkZxvNBOsLSKxHCtaSYTADcGvXBbZOtn89OL5OhFkC7P+pHbnf
+        aGXF6oHFxcXu5MmTjBRMwLBKkEEA3B6qAvd9paBQIT+GcL96v4of8hQL1m+QWA8SjEJlUCCFuD3gwFEg
+        At9XSt8PgszB/WCM+b4duSfY7SXwyD8cP368O3HiBKMF6yCbIsJwe8kHJkheDwLScD8YS8F937nXrfk2
+        DhIsJbs9TYv1IMEwuBwgkBwUFoHGAtZD4OtlMAXAfhCohvvAWJJvhpH6VIlwewrFHjt2rCNigmPBtobC
+        ImAogNLrdVDcr97PAfu+HomvNvAfGWrBXrLbUyj26NGjvdiYYBhSDTIIAIVFoDFEcD0KJQP3gzFGBOvh
+        PjBWxJdl5D4XdntaE3vkyJGOILEeKVgHmQSFUokPzgoMzQCaywIKfYovxgMJlpInhw8f7sXGBPdBg0Ca
+        gQJxoDBToDlQIBo0l4WFz13/GHxmQ38/S0vuxXqQYBiYFRBkDg4OjAWsBzE06Kl+ECKC+8BYlE/bEfsC
+        nhc8OXToUEfEBMNQCRFOS0oDK7oeBMT9YCzFVN8nI/LxNOgbllLy5ODBg73YmGAYUC0iGM3ggFEgBkz9
+        IFgP94MxEwt15L4n3Yv1IMEoTAgKpIBkwCiQdYYGy/0gPAvR/o9G5MM1seg70l7w5MCBAx0RE5wLdjDr
+        QbQKuBQYXA4XrIfnEe8N4gMbuS/CT/bv39+LjQlGIZpAgSQoChoE4vtLmZoLhJiC5wFjU7zfjtxJh16s
+        Bwm2BjuUooAEQ4PlfjBmgfvfc6/H4F1M7CiLlzzZt29fR8QEw4BqAcF4agMeGmy2H4Qq4X4wluWdetBZ
+        JSmZf6WYFQxCZVAghXBAegwF4uDrwZgZERTPJ96zEO17exxyh9HcXtZ+peh/2Lt3by82JhgGMxQRBIVD
+        yPdSZK8HoaTg+cDYFG9twH3ivWrezJM7Uur2Mi3WgwTD8FKgQAAUCoHGorgQuE+HUwnPB8K0kO1/ow25
+        I6VuD6HYPXv2dERMsA62FRQG0b9GgUTgPjAGASFJeD4wluV10e9+bsprIfJIKRLs9hCK9WQFo9AsoEAc
+        bs2qQIM+FEghPJ8eU8HG4H4wBnm1jNSZYRLr1g48Bi+I3bt392JjgnXAQ4N1a+JAPSgUB/eBMRMqOJ5P
+        vW8l6H+lPakzw4RbO/DIpQdygvkJRqFZUIHU4ucJAMHkQHPXsPCym6+WlzaIHQzXgt2agbep0heQWE9M
+        MDE0WLfWIGBAFaC5a5ByhqAPhscEuzUDb9HSF8YEa8korGLADWrcnpoGqBl7/hzoUDgSTG4k2dINu3bt
+        6oicYLTJMXB72tZi9al/LdnLJTcSc+lGJFhLDp5gsOkWuL1sK7Ho1L9ECyYXkuLSE+zcubMXK0kJRjfR
+        AreXbSdWn/pPCSYXkurSE5UK9vB/RYObK8HtYSagtYcQO/mP/mkHKdhLdnsKPAwuPSGJlZQKRjddgtvD
+        TEBrD0Ge+q8R7PYUeGhWemJPiWAtOfj/YRDGPIIOhct/1oGwCEZZE80LLULs2LGj+AlGglFI84g8FK4F
+        a8kpwShrYvRCixI5wVqyFuyRHxsS/LkwCHMWoCOlntih8BLBKEti5oU2QVifYKtgLRmFPgvkkdKYZItg
+        LdnLRVkSm15oUxIpWEuuEeyfYEJ/AU+ivyft0UdZJPpAmsfLrRVMoGwkW67QJiWWpzgmWEu2CNaSLYK1
+        ZItgLTknGGUjmZtCm5eMIVhLtgjWki2CtWQpGN2rZO4L3ZTE+gRryVtdMLpXybYtdLMWrIK1ZItgLVkK
+        Rnux8MIVCsFC6RPcSjDai4XNqcnkfxFZEmpgF3tbAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button_weiter.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAANIAAAAtCAYAAADbXTWOAAAABGdBTUEAALGPC/xhBQAAAzRJREFUeF7t
+        lktqlFEYRHsnLsEHRtGID9xDfL91C1mSOBEciCKCA8GBICKICA4EB65DKfINDnQROunu21//VMEZpe+9
+        9cMpyGwdefH1x78QulKa9o8rH0IXStP+ceVD6EJp2jMs+vzNuxDaQldL3z5hOVc+hC7Q1dK3T1jOlQ+h
+        C3S19N1sWIhFd0/sh9AWukqHS+vxYQmWc+VD6AJdpcOl9fiwBMu58iF0ga7S4dJ6TPgwC7nC4tn1lyFs
+        HOemoMN0u3RfX/gYS7iSwn1UCKNxbgo6TLdL9/WFj7GEKyncR4UwGuemoMN0u3RfbfgAH3bFhPuQELrg
+        nBV0m87XDJYPL+Vjrox4eu1VCG1xzgq6TedrBsuHl/IxV0Y8ufo6hLY4ZwXdpvM1g+OFF/EBV0A8vvI2
+        hK3DuSzoPLdQ81g8PMxL3aPi0eX3IWwdzmVB57mFmsfi4WFe6h4VDy99CGHrcC4LOs8t1DwODw/wIveQ
+        eLD7MYTJ4BwX3AI3UrOZD3/Ew+5ycf/ipxAmg3NccAvcSM1mPvwRD7vLxb0Ln0OYDM5xwS1wIzWbg/AP
+        POAuFHfPfwlh8jj3BTfC7Rx5SHfOfQth8jj3BTfC7Rx5SLd3vocweZz7ghvhduofvIPwDzzgLhS3zv4M
+        YTI4xwW3wI3UbObDH/Gwu1zcPPMrhMngHBfcAjdSs5kPf8TD7nJx4/TvECaDc1xwC9xIzebw8AAvcg+J
+        vVN/Qtg6nMuCznMLNY/Fw8O81D0q9k7+DWHrcC4LOs8t1DwWDw/zUveocCVD6I5zWdB5bqHmcbzwIj7g
+        CghXOIQuOGcF3abzNYPlw0v5mCsjXPkQuuCcFXSbztcMlg8v5WOujHDlQ+iCc1bQbTpfM1ht+AAfdsWE
+        +5AQRuPcFHSYbpfu6wsfYwlXUriPCmE0zk1Bh+l26b6+8DGWcCWF+6gQRuPcFHSYbpfuY8KHWcgVDqEL
+        dJUOl9bjwxIs58qH0AW6SodL6/FhCZZz5UPoAl2lw6X1ZsNCLBpCN+hq6dsnLOfKh9AFulr69gnLufIh
+        dIGulr49w6IhdKM07R9XPoQulKb948qH0IXSdIWZzf4DxxgZEIfnHIQAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
