--- a/WerWirdMillionär/Resources.resx
+++ b/WerWirdMillionär/Resources.resx
@@ -136,16 +136,25 @@
   <data name="Joker_1_hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Joker_1_hover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Joker_1_used" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Joker_1_used.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Joker_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Joker_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Joker_2_hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Joker_2_hover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Joker_2_used" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Joker_2_used.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Joker_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Joker_3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Joker_3_hover" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Joker_3_hover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Joker_3_used" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Joker_3_used.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
